[package]
name = "wrong_json_bench"
version = "0.1.0"
authors = ["yaro <0623forbidden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
